--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-use-cart": "^1.13.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
